transaction service : report - customer impl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=transaction-service
 
 #DB
 # Use H2 file-based database (database will be saved on disk)
-spring.datasource.url=jdbc:h2:file:./data/testdb
+spring.datasource.url=jdbc:h2:file:./data/transaction-db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -23,7 +23,9 @@ spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.in-memory=false
 
 # Enable Hibernate batch processing
-spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.jdbc.batch_size=10000
 spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.datasource.hikari.maximum-pool-size=20
+
+spring.threads.virtual.enabled=true
