transaction service : added security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.jpa.properties.hibernate.batch_versioned_data=true
 spring.datasource.hikari.maximum-pool-size=20
 
 spring.threads.virtual.enabled=true
+
+api.key=MY_STATIC_SECRET_KEY
